compatibility with 2019 and java 1.8